@@ -4,6 +4,7 @@ import org.gainratio.amlfilter.BaseUnitTest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -17,7 +18,7 @@ public class StringUtilsTest extends BaseUnitTest {
     @Test
     void testSplitDeduplicateAndOrderTokensRetuurnsCorrectResults() {
         String str = "GHK ,DEF ,GHK, ABC ,ABC";
-        List<String> expectedResults = List.of("ABC", "DEF", "GHK");
+        List<String> expectedResults = Arrays.asList("ABC", "DEF", "GHK");
         List<String> actualResults = StringUtils.splitDeduplicateAndOrderTokens(str, ",");
         assertEquals(expectedResults, actualResults);
     }
